# redisgraph-bulk-loader

./: .gitignore  LICENSE  README.md  bulk_insert.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: check-pypi.yml  codeql.yml  integration.yml  publish-pypi.yml
bulk_insert/: __init__.py  bulk_insert.py  configs.py  entity_file.py  exceptions.py  label.py  module_vars.py  query_buffer.py  relation_type.py  schema.py
demo/: VISITED.csv
example/: Country.csv  KNOWS.csv  Person.csv  VISITED.csv
example2/: Robots.csv
redisgraph_bulk_loader/: __init__.py  bulk_insert.py  bulk_update.py  config.py  entity_file.py  label.py  query_buffer.py  relation_type.py
test/: requirements.txt  test.py  test_bulk_loader.py  test_bulk_update.py  test_config.py  test_label.py  test_relation_type.py
