[tool.poetry]
name = "redisgraph-bulk-loader"
version = "0.9.11"
description = "RedisGraph Bulk Import Tool"
authors = ["RedisLabs <oss@redislabs.com>"]
license = "BSD-3-Clause"
readme = "README.md"

classifiers = [
    'Topic :: Database',
    'Programming Language :: Python',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'License :: OSI Approved :: BSD License',
    'Development Status :: 5 - Production/Stable'

]
keywords = ["Redis Graph Extension"]

[tool.poetry.scripts]
redisgraph-bulk-update = "redisgraph_bulk_loader.bulk_update:bulk_update"
redisgraph-bulk-insert = "redisgraph_bulk_loader.bulk_insert:bulk_insert"

[tool.poetry.urls]
url = "https://redisgraph.io"
repository = "https://github.com/RedisGraph/redigraph-bulk-loader"

[tool.poetry.dependencies]
python = "^3.8.5"
click = "^8.0.1"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]
codecov = "^2.1.11"
flake8 = "^3.9.2"
tox = "^3.23.1"
tox-poetry = "^0.3.0"
bandit = "^1.7.0"
vulture = "^2.3"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
redisgraph = "^2.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
