[tool.poetry]
name = "redisgraph-bulk-loader"
version = "1.0.0"
description = "RedisGraph Bulk Import Tool"
authors = ["Redis Inc <oss@redis.com>"]
license = "BSD-3-Clause"
readme = "README.md"

classifiers = [
    'Topic :: Database',
    'Programming Language :: Python',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'License :: OSI Approved :: BSD License',
    'Development Status :: 5 - Production/Stable'

]
keywords = ["Redis Graph Extension"]

[tool.poetry.scripts]
redisgraph-bulk-update = "redisgraph_bulk_loader.bulk_update:bulk_update"
redisgraph-bulk-insert = "redisgraph_bulk_loader.bulk_insert:bulk_insert"

[tool.poetry.urls]
url = "https://redisgraph.io"
repository = "https://github.com/RedisGraph/redisgraph-bulk-loader"

[tool.poetry.dependencies]
python = "^3.6.5"
click = "^8.0.1"
redis = "^4.3.4"
pathos = "^0.2.8"

[tool.poetry.dev-dependencies]
codecov = "^2.1.11"
flake8 = "^3.9.2"
tox = "^3.15.0"
tox-poetry = "^0.3.0"
vulture = "^2.3.0"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
typing-extensions = "^4.1.1"
black = "^22.6.0"
isort = "^5.10.1"
flynt = "^0.76"
tox-docker = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
